<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:singleLineTitle="false"
        android:title="@string/pref_appearance">


        <com.aatorque.prefs.ImageListPreference
            android:entries="@array/Themes"
            android:entryValues="@array/Themes"
            android:key="selectedTheme"
            android:title="@string/pref_theme"
            android:persistent="false"
            app:entryImages="@array/ThemesThumbs" />
        <com.aatorque.prefs.ImageListPreference
            android:entries="@array/fontEntries"
            android:entryValues="@array/fontValues"
            android:key="selectedFont"
            android:title="@string/pref_font"
            app:entryImages="@array/FontThumbs"
            android:persistent="false"
            app:tint="@color/tintColor"
        />
        <com.aatorque.prefs.ImageListPreference
            android:entries="@array/backgroundstrings"
            android:entryValues="@array/backgrounds"
            app:entryImages="@array/thumbs_backgrounds"
            android:key="selectedBackground"
            android:persistent="false"
            android:title="@string/pref_background" />

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="centerGaugeLarge"
            android:summaryOff="@string/pref_shrink_gauge_off"
            android:summaryOn="@string/pref_shrink_gauge_on"
            android:persistent="false"
            android:title="@string/pref_shrink_gauge"
             />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="minMaxBelow"
            android:summary="@string/minmax_below_desc"
            android:persistent="false"
            android:title="@string/minmax_below"
            />


        <EditTextPreference
            android:inputType="number"
            android:key="dashboardCount"
            android:title="@string/num_screens"
            android:defaultValue="1"
            android:persistent="false"

            />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/media">
        <Preference
            android:key="manageFuelModules"
            android:persistent="false"
            android:summary="@string/fuel_modules_summary"
            android:title="@string/fuel_modules_title"
            app:fragment="com.aatorque.prefs.FuelModuleSettingsFragment" />
        <EditTextPreference
            android:defaultValue="3.24"
            android:inputType="numberDecimal"
            android:key="fuelPricePerGallon"
            android:summary="@string/fuel_price_per_gallon_summary"
            android:title="@string/fuel_price_per_gallon_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="11.90"
            android:inputType="numberDecimal"
            android:key="fuelTankGallons"
            android:summary="@string/fuel_tank_gallons_summary"
            android:title="@string/fuel_tank_gallons_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="60"
            android:inputType="number"
            android:key="tripPauseMergeMinutes"
            android:summary="@string/trip_pause_merge_summary"
            android:title="@string/trip_pause_merge_title"
            app:useSimpleSummaryProvider="true" />
        <Preference
            android:key="resetFuelTrip"
            android:persistent="false"
            android:summary="@string/fuel_media_reset_summary"
            android:title="@string/fuel_media_reset_title" />
        <CheckBoxPreference
            android:key="mediaBg"
            android:persistent="false"
            android:summary="@string/media_background_summary"
            android:title="@string/media_background_title" />
        <SeekBarPreference
            android:defaultValue="0"
            android:dependency="mediaBg"
            android:key="blurArtwork"
            android:max="30"
            android:persistent="false"
            android:summary="@string/media_blur_summary"
            android:title="@string/media_blur_title"
            app:min="0"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            android:defaultValue="0"
            android:dependency="mediaBg"
            android:key="darkenArtwork"
            android:max="100"
            android:persistent="false"
            android:summary="@string/media_darken_summary"
            android:title="@string/media_darken_title"
            app:min="0"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            android:defaultValue="100"
            android:key="gaugeOpacity"
            android:max="100"
            android:persistent="false"
            android:summary="@string/opacity_summary"
            android:title="@string/opacity_title"
            app:min="50"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/monthly_history_category">
        <Preference
            android:key="monthlyHistoryLocation"
            android:persistent="false"
            android:summary="@string/monthly_history_location_not_configured"
            android:title="@string/monthly_history_location_title" />
        <Preference
            android:key="exportMonthlyHistoryCsv"
            android:persistent="false"
            android:summary="@string/monthly_history_export_summary"
            android:title="@string/monthly_history_export_title" />
        <Preference
            android:key="restoreFuelBackup"
            android:persistent="false"
            android:summary="@string/fuel_backup_restore_summary"
            android:title="@string/fuel_backup_restore_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/fuel_sync_category">
        <Preference
            android:key="fuelRecords"
            android:persistent="false"
            android:summary="@string/fuel_records_preference_summary"
            android:title="@string/fuel_records_preference_title" />
        <ListPreference
            android:defaultValue="disabled"
            android:entries="@array/fuel_sync_role_entries"
            android:entryValues="@array/fuel_sync_role_values"
            android:key="fuelSyncRole"
            android:summary="@string/fuel_sync_role_summary"
            android:title="@string/fuel_sync_role_title"
            app:useSimpleSummaryProvider="true" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="fuelSyncAutomatic"
            android:summary="@string/fuel_sync_automatic_summary"
            android:title="@string/fuel_sync_automatic_title" />
        <Preference
            android:key="fuelSyncViewerFile"
            android:persistent="false"
            android:summary="@string/fuel_sync_viewer_file_summary"
            android:title="@string/fuel_sync_viewer_file_title" />
        <Preference
            android:key="fuelSyncNow"
            android:persistent="false"
            android:summary="@string/fuel_sync_now_summary"
            android:title="@string/fuel_sync_now_title" />
        <Preference
            android:key="fuelSyncStatus"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/fuel_sync_never"
            android:title="@string/fuel_sync_status_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:singleLineTitle="false"
        android:title="@string/dashboards"
        android:key="dashboardsCat">

    </PreferenceCategory>

</PreferenceScreen>
